# internal/model/task_update.go
@@ -1,0 +1,7 @@
+package model
+
+type UpdateTask struct {
+	Title       string     `json:"title,omitempty"`
+	Description string     `json:"description,omitempty"`
+	Status      TaskStatus `json:"status,omitempty"`
+}
